<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SistemaMatricula</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_saludo">Bienvenido:</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_profesores">Profesores</string>
    <string name="menu_alumnos">Alumnos</string>
    <string name="menu_secciones">Secciones</string>
    <string name="str_titulo">Sistema de Administracion de Matriculas</string>
    <string name="action_ingresar">INGRESAR</string>
    <string name="action_inicio">Inicio de sesión</string>

    <string name="camporequerido">Ingrese datos</string>
    <string name="confirmacion">Confirmación</string>
    <string name="mensajeeliminar">¿Desea eliminar el profesor %s</string>
    <string name="mensajeeliminaralu">¿Desea eliminar el alumno %s</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>


    <string name="title_activity_login">SistemaMatricula</string>


    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="area">Area</string>
    <string name="estado">Estado</string>
    <string name="codigo">Codigo</string>
    <string name="celular">Celular</string>
    <string name="ciclo">Ciclo</string>
    <string name="reciente">Reciente...</string>
    <string name="lista">Lista profesores</string>


    <string name="carrera_ti">TECNOLOGÍAS DE LA INFORMACIÓN</string>
    <string name="carrera_adm">GESTIÓN Y NEGOCIOS</string>
    <string name="carrera_inge">INGENIERÍA</string>
    <string name="carrera_comu">COMUNICACIONES</string>
    <string name="secciones">Secciones....</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_mail">Not a valid mail</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_id" tools:ignore="TypographyDashes">176346144139-553qs9ntri8u875ir5itkd91l4tpputp.apps.googleusercontent.com</string>
    <string name="toyota">TOYOTA</string>


</resources>