<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="pe.cibertec.edu.sistemamatricula.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_reportes"
        android:name="pe.cibertec.edu.sistemamatricula.ui.reportes.ReportesFragment"
        android:label="@string/menu_reportes"
        tools:layout="@layout/fragment_reportes" />

    <fragment
        android:id="@+id/nav_profesor"
        android:name="pe.cibertec.edu.sistemamatricula.ui.profesor.ProfesorFragment"
        android:label="@string/menu_profesores"
        tools:layout="@layout/fragment_profesor" >
        <action
            android:id="@+id/action_nav_profesor_to_profesorOperaFragment"
            app:destination="@id/profesorOperaFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_alumnos"
        android:name="pe.cibertec.edu.sistemamatricula.ui.alumnos.AlumnosFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_alumnos" >
        <action
            android:id="@+id/action_nav_alumnos_to_alumnosOpeFragment"
            app:destination="@id/alumnosOpeFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_secciones"
        android:name="pe.cibertec.edu.sistemamatricula.ui.seccion.SeccionFragment"
        android:label="@string/menu_reportes"
        tools:layout="@layout/fragment_seccion" />
    <activity
        android:id="@+id/loginActivity"
        android:name="pe.cibertec.edu.sistemamatricula.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/mainActivity"
        android:name="pe.cibertec.edu.sistemamatricula.MainActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />
    <fragment
        android:id="@+id/profesorOperaFragment"
        android:name="pe.cibertec.edu.sistemamatricula.ui.ProfesorOperaFragment"
        android:label="fragment_profesor_opera"
        tools:layout="@layout/fragment_profesor_opera" />
    <fragment
        android:id="@+id/alumnosOpeFragment"
        android:name="pe.cibertec.edu.sistemamatricula.ui.alumnos.AlumnosOpeFragment"
        android:label="fragment_alumnos_ope"
        tools:layout="@layout/fragment_alumnos_ope" />

</navigation>